Add TimeZoneService. Code refactor: Add TraceResult